// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createIdentifierContainers Tests should create IdentifierContainer element when user exists in transaction context 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "identifier": "transactionUser@okta.com",
        },
        "type": "IdentifierContainer",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`createIdentifierContainers Tests should default to existing IdentifierContainer even when user exists in transaction context 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "identifier": "testUser@okta.com",
        },
        "type": "IdentifierContainer",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`createIdentifierContainers Tests should hide IdentifierContainer element when user exists in transaction context 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "identifier": "transactionUser@okta.com",
        },
        "type": "IdentifierContainer",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`createIdentifierContainers Tests should not create IdentifierContainer element when one already exists in schema 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "identifier": "testUser@okta.com",
        },
        "type": "IdentifierContainer",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
